--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-flask==0.11
-thespian==3.5.2
+appdirs==1.4.3
+click==6.7
+Flask==0.11
+itsdangerous==0.24
+Jinja2==2.9.6
 lifter==0.4.1
+MarkupSafe==1.0
+packaging==16.8
+persisting-theory==0.2.1
+pyparsing==2.2.0
+six==1.10.0
+SQLAlchemy==1.1.10
+thespian==3.5.2
+Werkzeug==0.12.2
