parsed_classes for central server add, minor bug fixes, # Everything working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ hydrus:
   ports:
     - "8080:80"
   environment:
+    # - HYDRUS_SERVER_URL=http://localhost/ ## For linux local
+    # - HYDRUS_SERVER_URL=http://192.168.99.100:8080/ ## For windows 10
     - HYDRUS_SERVER_URL=http://54.169.232.177:8080/
   links:
     - postgres:postgres
