--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,11 +1,10 @@
 language: python
 python:
-  - "3.5.2"
+  - "3.5"
+  - "3.5-dev"  # 3.5 development branch
   - "3.6"
-  - "3.7"
-virtualenv:
-  system_site_packages: true
+  - "3.6-dev"  # 3.6 development branch
+  - "3.7-dev"
 install:
-  - pip install -r requirements.txt
-  - pip install .
+  - pip install -e .
 script: python -m unittest discover
