Added Raises block to all the functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "editor.formatOnSave": true,
     "python.formatting.provider": "autopep8",
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "python.pythonPath": "venv/bin/python"
 
 }
