--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,4 @@ SQLAlchemy==1.2.10
 thespian==3.9.2
 Werkzeug==0.14.1
 PyYAML==4.2b1
+-e git+https://github.com/ShravanDoda/openAPIParser.git#egg=openAPIParser
