--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ python:
   - "3.6-dev"  # 3.6 development branch
   - "3.7-dev"
 install:
-  - pip install -r requirements.txt
+  - python setup.py install
 script: python -m unittest discover
