--- a/requirements.txt
+++ b/requirements.txt
@@ -24,4 +24,4 @@ SQLAlchemy==1.2.10
 thespian==3.9.2
 Werkzeug==0.14.1
 PyYAML==4.2b1
-git+git://github.com/de-sh/OAIParser#egg=OAIParser
+OAIParser==0.1
