Separated out Parser into another repo
Transfered contents of hydrus/parser to another repo. used `git add` instead of `git rm` preserving history. updated CI files to mirror changes properly.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ python:
   - "3.6-dev"  # 3.6 development branch
   - "3.7-dev"
 install:
+  - pip install -e git+git://github.com/HTTP-APIs/hydra-openapi-parser.git#egg=hydra-openapi-parser
   - pip install -e .
 script: python -m unittest discover
