--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 aniso8601==3.0.2
 appdirs==1.4.3
 blinker==1.4
-certifi==2018.4.16
 click==6.7
 Flask==1.0.2
 Flask-Cors==3.0.6
@@ -24,3 +23,4 @@ SQLAlchemy==1.2.10
 thespian==3.9.2
 Werkzeug==0.14.1
 PyYAML==4.2b1
+-e git+https://github.com/HTTP-APIs/hydra-python-core#egg=hydra_python_core
