--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,6 @@ six==1.11.0
 SQLAlchemy==1.2.10
 thespian==3.9.2
 Werkzeug==0.14.1
-PyYAML
+PyYAML==5.1
 git+https://github.com/HTTP-APIs/hydra-python-core@v0.1#egg=hydra_python_core
 git+https://github.com/HTTP-APIs/hydra-openapi-parser@0.1.1#egg=hydra_openapi_parser
