--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,11 @@ python:
   - "3.7-dev"
 install:
   - pip install -r requirements.txt --no-cache
-script: python -m unittest discover
+before_script:
+  - npm install pyright
+script:
+  - python -m unittest discover
+  - npx pyright .
 env:
   - API_NAME=api PORT=8000
 deploy:
