--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,6 @@ SQLAlchemy
 thespian==3.9.2
 Werkzeug
 PyYAML
-SQLAlchemy-Paginator
+git+git://github.com/HarsheetKakar/sqlalchemy-paginator.git
 git+https://github.com/HTTP-APIs/hydra-python-core@v0.1#egg=hydra_python_core
 git+https://github.com/HTTP-APIs/hydra-openapi-parser@0.1.1#egg=hydra_openapi_parser
