--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ MarkupSafe==1.0
 packaging==17.1
 pep8==1.7.1
 persisting-theory==0.2.1
-psycopg2
+psycopg2==2.7.5
 pyparsing
 python-dateutil
 pytz
