--- a/requirements.txt
+++ b/requirements.txt
@@ -24,5 +24,5 @@ six==1.11.0
 SQLAlchemy
 thespian==3.9.2
 Werkzeug
-git+https://github.com/HTTP-APIs/hydra-python-core@master#egg=hydra_python_core
+git+https://github.com/HTTP-APIs/hydra-python-core@develop#egg=hydra_python_core
 git+https://github.com/HTTP-APIs/hydra-openapi-parser@0.1.1#egg=hydra_openapi_parser
