--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
 python:
   - "3.6"
+  - "3.6-dev"  # 3.6 development branch
   - "3.7"
+  - "3.7-dev" # 3.7 development branch
 install:
   - pip install -r requirements.txt --no-cache
 script: python -m unittest discover
