--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ python:
   - "3.7-dev"
 install:
   - pip install -r requirements.txt --no-cache
-script: python -m unittest discover
+script: pytest
 env:
   - API_NAME=api PORT=8000
