--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ python:
   - "3.7-dev" # 3.7 development branch
 install:
   - pip install -r requirements.txt --no-cache
-script: python -m unittest discover
+script: pytest
 env:
   - API_NAME=api PORT=8000
