--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ alembic==1.0.10
 aniso8601==3.0.2
 appdirs==1.4.3
 blinker==1.4
-click==7.0
+click==7.1.2
 certifi==2019.11.28
 Flask==1.1.1
 Flask-Cors==3.0.8
@@ -34,3 +34,4 @@ six==1.13.0
 SQLAlchemy==1.3.12
 thespian==3.9.11
 Werkzeug==0.16.0
+flake8
