--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       # - HYDRUS_SERVER_URL=http://192.168.99.100:8081/ ## For windows 10
       # - HYDRUS_SERVER_URL=http://54.169.232.177:8080/
       - DEBUG=1
-      - API_NAME=serverapi
+      - API_NAME=api
       # relative path to the ApiDoc, from the project root
       - APIDOC_REL_PATH=hydrus/samples/hydra_doc_sample.py
       - DB_URL=sqlite:///database.db
