--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build: ./
     ports:
       - "8080:8080"
+    # command:
+    #   - /.venv/bin/uwsgi --http :8080 /app/hydrus/uwsgi.ini
     environment:
       # - HYDRUS_SERVER_URL=http://192.168.99.100:8081/ ## For windows 10
       # - HYDRUS_SERVER_URL=http://54.169.232.177:8080/
