--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
   - "3.7-dev" # 3.7 development branch
 install:
   - pip install poetry && poetry install  --no-interaction --no-ansi
-script: .venv/bin/pytest
+script: pytest
 env:
   - API_NAME=api PORT=8000
