requirements.txt updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ git+https://github.com/HTTP-APIs/hydra-openapi-parser@0.1.1#egg=hydra_openapi_pa
 itsdangerous==1.1.0
 Jinja2==2.10.3
 lifter==0.4.1
-psycopg2==2.8.6
+psycopg2-binary
 pytest==5.4.1
 Mako==1.1.0
 MarkupSafe==1.1.1
