--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ appdirs = "~1.4.3"
 blinker = "~1.4"
 click = "~7.1.2"
 certifi = "~2019.11.28"
+flake8 = "~3.8.3"
 Flask = "~1.1.1"
 Flask-Cors = ">=3.0.10"
 Flask-RESTful = "~0.3.7"
@@ -41,9 +42,9 @@ pytz = "~2019.3"
 PyYAML = ">=5.4"
 six = "~1.13.0"
 SQLAlchemy = "~1.3.12"
+structlog = ">=21.1.0"
 thespian = "~3.9.11"
 Werkzeug = "~0.16.0"
-flake8 = "~3.8.3"
 
 [tool.poetry.dev-dependencies]
 
