Fix automated build requirement (pyld)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ itsdangerous = ">=2.0.0"
 Jinja2 = ">=3.0"
 lifter = "~0.4.1"
 psycopg2-binary = "~2.8.6"
+pyld = "~2.0.3"
 pytest = "~6.2.4"
 Mako = "~1.1.0"
 MarkupSafe = ">=2.0.0rc2"
