--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 alembic==1.0.10
-aniso8601==3.0.2
 appdirs==1.4.3
 blinker==1.4
-click==7.1.2
-certifi==2019.11.28
 flake8
 Flask==2.0.1
 Flask-Cors==3.0.10
@@ -11,29 +8,17 @@ Flask-RESTful==0.3.9
 Flask-SocketIO==4.2.1
 gevent==20.12.0
 gevent-websocket==0.10.1
-greenlet==0.4.17
 hydra_python_core==0.3.1
 hydra_openapi_parser
-itsdangerous==2.0.1
-Jinja2==3.0.1
 lifter==0.4.1
-psycopg2-binary==2.8.6
+psycopg2-binary==2.9.3
 pyld==2.0.3
 pytest==6.2.4
-Mako==1.1.0
-MarkupSafe==2.0.1
-packaging==20.9
 pep8==1.7.1
 persisting-theory==0.2.1
-pyparsing==2.4.6
-python-dateutil==2.8.1
-python-editor==1.0.4
 python-engineio==3.11.2
 python-socketio==4.4.0
-pytz==2019.3
-PyYAML==5.4.1
-six==1.13.0
+PyYAML==6.0
 SQLAlchemy==1.3.12
-thespian==3.9.11
-Werkzeug==2.0.1
-structlog
+structlog==21.5.0
+thespian==3.10.6
