--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ hydra_openapi_parser = ">=0.2"
 itsdangerous = ">=2.0.0"
 Jinja2 = ">=3.0"
 lifter = "~0.4.1"
+llxml = ">=4.6.5"
 psycopg2-binary = "~2.8.6"
 pyld = "~2.0.3"
 pytest = "~6.2.4"
@@ -46,6 +47,7 @@ SQLAlchemy = "~1.3.12"
 structlog = ">=21.1.0"
 thespian = "~3.9.11"
 Werkzeug = ">=2.0"
+urllib3 = "==1.26.5"
 
 [tool.poetry.dev-dependencies]
 
