--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,21 @@
-alembic==1.0.10
-appdirs==1.4.3
-blinker==1.4
-flake8
-Flask==2.0.1
-Flask-Cors==3.0.10
-Flask-RESTful==0.3.9
-Flask-SocketIO==4.2.1
-gevent==20.12.0
-gevent-websocket==0.10.1
-hydra_python_core==0.3.1
+alembic>=1.0.10
+appdirs>=1.4.3
+blinker>=1.4
+Flask>=2.0.1
+Flask-Cors>=3.0.10
+Flask-RESTful>=0.3.9
+Flask-SocketIO>=4.2.1
+gevent>=20.12.0
+gevent-websocket>=0.10.1
+hydra_python_core>=0.3.1
 hydra_openapi_parser
-lifter==0.4.1
 psycopg2-binary==2.9.3
-pyld==2.0.3
-pytest==6.2.4
-pep8==1.7.1
-persisting-theory==0.2.1
-python-engineio==3.11.2
-python-socketio==4.4.0
-PyYAML==6.0
-SQLAlchemy==1.3.12
-structlog==21.5.0
+pyld>=2.0.3
+pytest>=6.2.4
+pep8>=1.7.1
+persisting-theory>=0.2.1
+python-engineio>=3.11.2
+python-socketio>=4.4.0
+PyYAML>=6.0
+SQLAlchemy>=1.3.12
+structlog>=21.5.0
