--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ PyLD = "2.0.3"
 pytest = ">=7.1.2"
 pep8 = "1.7.1"
 flake8 = ">=3.8.4"
+pre-commit = ">=2.19"
 
 [tool.pytest.ini_options]
 minversion = "7.1.2"
