--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ Flask-Cors = "3.0.10"
 Flask-RESTful = "0.3.9"
 Flask-SocketIO = "4.2.1"
 gevent = "20.12.0"
+lxml = ">=4.9.1"
 gevent-websocket = "0.10.1"
 hydra_python_core = ">=0.3.1"
 hydra_openapi_parser = ">=0.2"
