--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-RESTful>=0.3.9
 Flask-SocketIO>=4.2.1
 gevent>=20.12.0
 gevent-websocket>=0.10.1
+lxml>=4.9.1
 hydra_python_core>=0.3.1
 hydra_openapi_parser
 psycopg2-binary==2.9.3
