--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "~=3.8.0"
 alembic = "1.0.10"
 appdirs = "1.4.3"
 blinker = "1.4"
+dateutils = "0.6.12"
 flake8 = "~3.8.3"
 Flask = "2.0.1"
 Flask-Cors = "3.0.10"
